[gd_scene load_steps=21 format=3 uid="uid://c80562etr1nq6"]

[ext_resource type="Script" path="res://scenes/car/car.gd" id="1_ru5mq"]
[ext_resource type="Texture2D" uid="uid://c5jfe6wigls5s" path="res://img/atlas/cars.png" id="2_fe8h7"]
[ext_resource type="AudioStream" uid="uid://6m3jk60p4qul" path="res://sounds/car_move.mp3" id="3_8p8ov"]
[ext_resource type="AudioStream" uid="uid://p8axr7ia3u5j" path="res://sounds/car_crash.mp3" id="4_nxdjb"]

[sub_resource type="Gradient" id="Gradient_tq2is"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_w2t7m"]
gradient = SubResource("Gradient_tq2is")
fill = 1
fill_from = Vector2(0, 0.5)
fill_to = Vector2(0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_412ah"]
gradient = SubResource("Gradient_tq2is")
fill = 1
fill_from = Vector2(1, 0.5)

[sub_resource type="Animation" id="Animation_quknm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(31, 16, 117, 49)]
}

[sub_resource type="Animation" id="Animation_hd2fc"]
resource_name = "car0"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(31, 16, 117, 49)]
}

[sub_resource type="Animation" id="Animation_07brv"]
resource_name = "car1"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(31, 238, 117, 49)]
}

[sub_resource type="Animation" id="Animation_e4sa8"]
resource_name = "car2"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(31, 463, 117, 49)]
}

[sub_resource type="Animation" id="Animation_7i1te"]
resource_name = "car3"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(33, 919, 117, 49)]
}

[sub_resource type="Animation" id="Animation_n5tl0"]
resource_name = "car4"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(32, 690, 117, 49)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c7ob5"]
_data = {
"RESET": SubResource("Animation_quknm"),
"car0": SubResource("Animation_hd2fc"),
"car1": SubResource("Animation_07brv"),
"car2": SubResource("Animation_e4sa8"),
"car3": SubResource("Animation_7i1te"),
"car4": SubResource("Animation_n5tl0")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wmdab"]
size = Vector2(93, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dcbge"]
size = Vector2(15.25, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lcvea"]
size = Vector2(43.4375, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4v1ok"]
size = Vector2(115, 62)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eft7t"]
size = Vector2(93, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7x1ra"]
size = Vector2(1, 6)

[node name="Car" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_ru5mq")

[node name="Lights" type="Node2D" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="Lights"]
position = Vector2(107.292, 0.999996)
scale = Vector2(3.35287, 2.2)
energy = 0.1
texture = SubResource("GradientTexture2D_w2t7m")

[node name="PointLight2D2" type="PointLight2D" parent="Lights"]
position = Vector2(-99.216, 0)
scale = Vector2(3.1005, 2.2)
energy = 0.1
texture = SubResource("GradientTexture2D_412ah")

[node name="DirectionalLight2D" type="DirectionalLight2D" parent="Lights"]
visible = false
blend_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_fe8h7")
region_enabled = true
region_rect = Rect2(31, 16, 117, 49)
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c7ob5")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 4.5)
shape = SubResource("RectangleShape2D_wmdab")
debug_color = Color(0, 0.6, 0.443137, 0.419608)
metadata/_edit_lock_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-54.375, 4.5)
shape = SubResource("RectangleShape2D_dcbge")
debug_color = Color(0, 0.6, 0.443137, 0.419608)
metadata/_edit_lock_ = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(69.2813, 4.5)
shape = SubResource("RectangleShape2D_lcvea")
debug_color = Color(0, 0.6, 0.443137, 0.419608)
metadata/_edit_lock_ = true

[node name="CarHitBox" type="Area2D" parent="."]
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="CarHitBox"]
visible = false
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_4v1ok")
disabled = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CarHitBox"]
position = Vector2(0.5, 4.5)
shape = SubResource("RectangleShape2D_eft7t")
metadata/_edit_lock_ = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="CarHitBox"]
position = Vector2(-11, -20)
shape = SubResource("RectangleShape2D_7x1ra")
metadata/_edit_lock_ = true

[node name="CarMoveSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8p8ov")
max_distance = 1000.0
attenuation = 0.420449

[node name="CarCrachSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_nxdjb")

[connection signal="area_entered" from="CarHitBox" to="." method="_on_car_hit_box_area_entered"]
[connection signal="area_exited" from="CarHitBox" to="." method="_on_car_hit_box_area_exited"]
[connection signal="body_entered" from="CarHitBox" to="." method="_on_car_hit_box_body_entered"]
